Adding starting points for comments and markup

--- a/mr copy.ipynb
+++ b/mr copy.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Mean Reversion Testing**\n",
+    "\n",
+    "Mean reversion testing is ..."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -19,6 +28,16 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.dates as mdates\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Defining my functions**\n",
+    "\n",
+    "#### **1.** *normalize_and_accumulate_series(data)*\n",
+    "I needed a function that..."
    ]
   },
   {
@@ -71,6 +90,13 @@
     "        allTop = pd.merge(top10coint, top10corr)\n",
     "        return allTop\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Webscraping for tickers**"
    ]
   },
   {
