--- a/mr-Revised.ipynb
+++ b/mr-Revised.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# **Mean Reversion Testing**\n",
     "\n",
-    "Mean reversion testing is ..."
+    "Mean reversion testing tries to determine whether a time series eventually averages to a value over the life of the time series."
    ]
   },
   {
@@ -37,7 +37,18 @@
     "### **Defining my functions**\n",
     "\n",
     "#### **1.** *normalize_and_accumulate_series(data)*\n",
-    "I needed a function that..."
+    "#### **2.** *corr(data1, data2)*\n",
+    "#### **3.** *cointegrate_and_corrolate(indexpairs)*\n",
+    "I needed functions that wil average the percent change across the entire time series of the data. I then needed to find a coeffienct of correlation, almost a regression on one time series data to another. I chose to make my data span a range between Jan 1, 2017 and May 5, 2017. It was an arbirary choice to limit the amount of data for my computer to process.\n",
+    "\n",
+    "##### This ofcourse has its flaws.\n",
+    "\n",
+    "1. I lose out on having a proper length of time series data to normalize over.\n",
+    "2. If there are seasonaly trends. For example for winter clothing suppy company who's sales would spike during the winter months.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -364,11 +375,16 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.6 ('Mean-Reversion-Testing-master-4OmB8upN')",
+   "display_name": "Python 3.9.1 ('Mean-Reversion-Testing-36wynhyk')",
    "language": "python",
    "name": "python3"
   },
@@ -382,11 +398,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.1"
   },
   "vscode": {
    "interpreter": {
-    "hash": "88fe9676207abc203fc153128b2b9834d40dfb2b5baae92fbe55d25a8dbe7d57"
+    "hash": "6c7cb53fcbe10ebd9dc210ef94c205afbc18ef1aa9db1b9b7863ab67fa2e99e9"
    }
   }
  },
